[package]
name = "ws2812-pio"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "*"
embedded-time = "*"
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", branch = "main" }
pio = { git = "https://github.com/rp-rs/pio-rs.git", branch = "main" }
smart-leds-trait = "0.2.1"
nb = "1.0.0"
cortex-m = "0.7.3"
