[package]
name = "ws2812-pio"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "Driver implementation for the WS2812 smart LED using the RP2040's PIO peripheral."
documentation =  "https://docs.rs/ws2812-pio"
repository = "https://github.com/rp-rs/ws2812-pio-rs/"

[dependencies]
embedded-hal = "0.2.5"
fugit = "0.3.5"
rp2040-hal = "0.9.0"
pio = "0.2.0"
smart-leds-trait = "0.3"
smart-leds-trait-0-2 = { package = "smart-leds-trait", version = "0.2.1" }
nb = "1.0.0"
cortex-m = "0.7.3"
